--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^12.8.0",
     "@react-native-firebase/crashlytics": "^12.8.0",
+    "@react-native-firebase/messaging": "^12.8.0",
     "@react-native-firebase/remote-config": "^12.8.0",
     "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.7",
@@ -37,6 +39,7 @@
     "react-native-restart": "^0.0.22",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.7.2",
+    "react-native-select-dropdown": "^1.1.0",
     "react-native-simple-toast": "^1.1.3",
     "react-native-vector-icons": "^8.1.0",
     "react-native-webview": "^11.13.0",
