--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.29.1",
     "react": "17.0.2",
     "react-native": "0.65.1",
+    "react-native-animated-tree-view": "0.1.4",
     "react-native-calendars": "^1.1266.0",
     "react-native-device-info": "^8.3.3",
     "react-native-exit-app": "^1.1.0",
