--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-calendars": "^1.1266.0",
     "react-native-device-info": "^8.3.3",
     "react-native-exit-app": "^1.1.0",
+    "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.1.1",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-modal-datetime-picker": "^11.0.0",
