--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.65.1",
     "react-native-animated-tree-view": "0.1.4",
     "react-native-calendars": "^1.1266.0",
+    "react-native-camera": "4.2.1",
     "react-native-device-info": "^8.3.3",
     "react-native-exit-app": "^1.1.0",
     "react-native-gesture-handler": "^1.10.3",
@@ -38,6 +39,7 @@
     "react-native-paper": "^4.9.2",
     "react-native-permissions": "^3.0.5",
     "react-native-push-notification": "^8.1.0",
+    "react-native-qrcode-scanner": "1.5.4",
     "react-native-render-html": "^6.1.0",
     "react-native-restart": "^0.0.22",
     "react-native-safe-area-context": "^3.3.2",
