--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
   "name": "membroz_user_app",
-  "displayName": "Dubai Yoga Trainers - Staff"
+  "displayName": "Dubai Yoga Trainers - Trainer"
 }
