--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-community/netinfo": "^7.1.7",
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^12.8.0",
     "@react-native-firebase/crashlytics": "^12.8.0",
@@ -30,7 +31,7 @@
     "react-native-animated-tree-view": "0.1.4",
     "react-native-calendars": "^1.1266.0",
     "react-native-camera": "4.2.1",
-    "react-native-device-info": "^8.3.3",
+    "react-native-device-info": "^8.4.8",
     "react-native-exit-app": "^1.1.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.1.1",
