--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,12 +129,12 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.staffmembroz"
+        applicationId "com.membrozcrm"
         minSdkVersion rootProject.ext.minSdkVersion
         missingDimensionStrategy 'react-native-camera', 'general'
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 7
-        versionName "2.1"
+        versionCode 1
+        versionName "1.0"
     }
     splits {
         abi {
