--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -129,12 +129,12 @@ android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.dubaiyogatrainers"
+        applicationId "com.staffmembroz"
         minSdkVersion rootProject.ext.minSdkVersion
         missingDimensionStrategy 'react-native-camera', 'general'
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 2
-        versionName "1.1"
+        versionCode 8
+        versionName "2.1"
     }
     splits {
         abi {
