--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-image-picker": "^4.1.1",
     "react-native-loading-spinner-overlay": "^2.0.0",
+    "react-native-localization": "^2.1.7",
     "react-native-modal-datetime-picker": "^11.0.0",
     "react-native-navigation-bar-color": "^2.0.1",
     "react-native-paper": "^4.9.2",
