--- a/ios/GoogleService-Info.plist
+++ b/ios/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>org.reactjs.native.example.membrozcrm</string>
+	<string>org.reactjs.native.example.staffmembroz</string>
 	<key>PROJECT_ID</key>
 	<string>membroz-44bf7</string>
 	<key>STORAGE_BUCKET</key>
