--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/native-stack": "^6.1.0",
     "axios": "^0.21.4",
     "moment": "^2.29.1",
+    "moment-timezone": "^0.5.34",
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-animated-tree-view": "0.1.4",
