--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-community/push-notification-ios": "^1.10.1",
     "@react-native-firebase/app": "^12.8.0",
     "@react-native-firebase/crashlytics": "^12.8.0",
+    "@react-native-firebase/firestore": "^15.6.0",
     "@react-native-firebase/messaging": "^12.8.0",
     "@react-native-firebase/remote-config": "^12.8.0",
     "@react-native-picker/picker": "^2.1.0",
@@ -35,6 +36,7 @@
     "react-native-device-info": "^8.4.8",
     "react-native-exit-app": "^1.1.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-gifted-chat": "^1.0.4",
     "react-native-image-picker": "^4.1.1",
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-localization": "^2.1.7",
@@ -46,7 +48,7 @@
     "react-native-qrcode-scanner": "1.5.4",
     "react-native-render-html": "^6.1.0",
     "react-native-restart": "^0.0.22",
-    "react-native-safe-area-context": "^3.3.2",
+    "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.7.2",
     "react-native-select-dropdown": "^1.1.0",
     "react-native-simple-toast": "^1.1.3",
